// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ atoms / Heading ] #Heading when 'Heading' Centered is mounted should render 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold is-centered"
  >
    Lose consequence night studies Wolves should wizards destruction burglar? All right, then. Keep your secrets.
  </h1>
</DocumentFragment>
`;

exports[`[ atoms / Heading ] #Heading when 'Heading' Colors is mounted should render 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-primary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-tertiary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-inverted size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ atoms / Heading ] #Heading when 'Heading' Default is mounted should render 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ atoms / Heading ] #Heading when 'Heading' Inline is mounted should render 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-bold is-inline"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ atoms / Heading ] #Heading when 'Heading' Sizes is mounted should render 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-xs weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-sm weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-lg weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-2xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;

exports[`[ atoms / Heading ] #Heading when 'Heading' Weights is mounted should render 1`] = `
<DocumentFragment>
  <h1
    class="heading color-base size-md weight-normal"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    class="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</DocumentFragment>
`;
